[platform] minor optimization in `StartupActionScriptManager`
GitOrigin-RevId: 4801fbd7a328d294953c4c2fae043bd3f726e336